@@ -11,10 +11,10 @@ import org.elasticsearch.test.AbstractWireSerializingTestCase;
 import org.elasticsearch.xpack.core.ml.action.EvaluateDataFrameAction.Response;
 import org.elasticsearch.xpack.core.ml.dataframe.evaluation.EvaluationMetricResult;
 import org.elasticsearch.xpack.core.ml.dataframe.evaluation.MlEvaluationNamedXContentProvider;
-import org.elasticsearch.xpack.core.ml.dataframe.evaluation.classification.MulticlassConfusionMatrixResultTests;
 import org.elasticsearch.xpack.core.ml.dataframe.evaluation.regression.MeanSquaredError;
 import org.elasticsearch.xpack.core.ml.dataframe.evaluation.regression.RSquared;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class EvaluateDataFrameActionResponseTests extends AbstractWireSerializingTestCase<Response> {
@@ -28,8 +28,7 @@ public class EvaluateDataFrameActionResponseTests extends AbstractWireSerializin
     protected Response createTestInstance() {
         String evaluationName = randomAlphaOfLength(10);
         List<EvaluationMetricResult> metrics =
-            List.of(
-                MulticlassConfusionMatrixResultTests.createRandom(),
+            Arrays.asList(
                 new MeanSquaredError.Result(randomDouble()),
                 new RSquared.Result(randomDouble()));
         int numMetrics = randomIntBetween(0, metrics.size());
